tests/dependencies.yaml
kyverno:
  git:
    repo: "https://repo1.dso.mil/big-bang/product/packages/kyverno.git"
    branch: "renovate/ironbank"
  namespace: "kyverno"
