tests/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: "256Mi"
          cpu: "0.5"
        limits:
          memory: "256Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  containers:
    - name: busybox
      image: busybox
      resources:
        requests:
          memory: "50Mi"
          cpu: "100m"
        limits:
          memory: "100Mi"
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: "256Mi"
          cpu: "0.5"
        limits:
          memory: "256Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: "256Mi"
          cpu: "0.5"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app: myapp
spec:
  containers:
    - name: busybox
      image: busybox
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: "256Mi"
          cpu: "0.5"
        limits:
          memory: "256Mi"
