tests/test-pod-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-init-container-pod
  labels:
    coco: enabled
  annotations:
    coco.io/init-config: coco-init-config
spec:
  containers:
    - name: hello
      image: busybox:latest
      command: ["sh", "-c", "echo Hello from CoCo! && sleep 3600"]
