tests/test-pod-initdata.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-initdata-pod
  labels:
    coco: enabled
  annotations:
    coco.io/initdata-configmap: initdata-config
spec:
  containers:
    - name: hello
      image: busybox:latest
      command: ["sh", "-c", "echo Hello from CoCo! && sleep 3600"]
