tests/test-pod-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-sidecar-pod
  labels:
    coco: enabled
  annotations:
    coco.io/sidecar-config: coco-sidecar-config
spec:
  containers:
    - name: hello
      image: busybox:latest
      command: ["sh", "-c", "echo Hello from CoCo! && sleep 3600"]
